NA: use script to remove unused schemas