@@ -4,8 +4,6 @@ import com.comet.opik.api.BatchDelete;
 import com.comet.opik.api.DeleteThreadFeedbackScores;
 import com.comet.opik.api.DeleteTraceThreads;
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
 import com.comet.opik.api.Project;
 import com.comet.opik.api.ProjectStats;
 import com.comet.opik.api.Trace;
@@ -40,8 +38,13 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static com.comet.opik.api.FeedbackScoreBatch.FeedbackScoreBatchThread;
+import static com.comet.opik.api.FeedbackScoreBatch.FeedbackScoreBatchTracing;
+import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemThread;
+import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemTracing;
 import static com.comet.opik.api.TraceThread.TraceThreadPage;
 import static com.comet.opik.api.resources.utils.TestUtils.toURLEncodedQueryParam;
 import static com.comet.opik.infrastructure.auth.RequestContext.WORKSPACE_HEADER;
@@ -79,36 +82,36 @@ public class TraceResourceClient extends BaseCommentResourceClient {
                 .post(Entity.json(trace));
     }
 
-    public void feedbackScores(List<FeedbackScoreBatchItem> score, String apiKey, String workspaceName) {
+    public void feedbackScores(List<FeedbackScoreBatchItemTracing> score, String apiKey, String workspaceName) {
 
         try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
                 .path("feedback-scores")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
-                .put(Entity.json(new FeedbackScoreBatch(score)))) {
+                .put(Entity.json(FeedbackScoreBatchTracing.builder().scores(score).build()))) {
 
             assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
         }
     }
 
-    public Response callFeedbackScores(List<FeedbackScoreBatchItem> score, String apiKey, String workspaceName) {
+    public Response callFeedbackScores(List<FeedbackScoreBatchItemTracing> score, String apiKey, String workspaceName) {
         return client.target(RESOURCE_PATH.formatted(baseURI))
                 .path("feedback-scores")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
-                .put(Entity.json(new FeedbackScoreBatch(score)));
+                .put(Entity.json(FeedbackScoreBatchTracing.builder().scores(score).build()));
     }
 
-    public void threadFeedbackScores(List<FeedbackScoreBatchItem> score, String apiKey, String workspaceName) {
+    public void threadFeedbackScores(List<FeedbackScoreBatchItemThread> score, String apiKey, String workspaceName) {
         try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
                 .path("threads")
                 .path("feedback-scores")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
-                .put(Entity.json(FeedbackScoreBatch.builder()
+                .put(Entity.json(FeedbackScoreBatchThread.builder()
                         .scores(score)
                         .build()))) {
 
@@ -116,14 +119,15 @@ public class TraceResourceClient extends BaseCommentResourceClient {
         }
     }
 
-    public Response callThreadFeedbackScores(List<FeedbackScoreBatchItem> score, String apiKey, String workspaceName) {
+    public Response callThreadFeedbackScores(List<FeedbackScoreBatchItemThread> score, String apiKey,
+            String workspaceName) {
         return client.target(RESOURCE_PATH.formatted(baseURI))
                 .path("threads")
                 .path("feedback-scores")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
-                .put(Entity.json(FeedbackScoreBatch.builder()
+                .put(Entity.json(FeedbackScoreBatchThread.builder()
                         .scores(score)
                         .build()));
     }
@@ -215,7 +219,7 @@ public class TraceResourceClient extends BaseCommentResourceClient {
         return actualResponse;
     }
 
-    public List<List<FeedbackScoreBatchItem>> createMultiValueScores(List<String> multipleValuesFeedbackScores,
+    public List<List<FeedbackScoreBatchItemTracing>> createMultiValueScores(List<String> multipleValuesFeedbackScores,
             Project project, String apiKey, String workspaceName) {
         return IntStream.range(0, multipleValuesFeedbackScores.size())
                 .mapToObj(i -> {
@@ -226,13 +230,13 @@ public class TraceResourceClient extends BaseCommentResourceClient {
 
                     createTrace(trace, apiKey, workspaceName);
 
-                    List<FeedbackScoreBatchItem> scores = multipleValuesFeedbackScores.stream()
-                            .map(name -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                    List<FeedbackScoreBatchItemTracing> scores = multipleValuesFeedbackScores.stream()
+                            .map(name -> podamFactory.manufacturePojo(FeedbackScoreBatchItemTracing.class).toBuilder()
                                     .name(name)
                                     .projectName(project.name())
                                     .id(trace.id())
                                     .build())
-                            .toList();
+                            .collect(Collectors.toList());
 
                     feedbackScores(scores, apiKey, workspaceName);
 
