@@ -7,7 +7,6 @@ import com.comet.opik.api.Experiment;
 import com.comet.opik.api.ExperimentItem;
 import com.comet.opik.api.ExperimentType;
 import com.comet.opik.api.FeedbackScoreAverage;
-import com.comet.opik.api.FeedbackScoreBatchItem;
 import com.comet.opik.api.Optimization;
 import com.comet.opik.api.OptimizationStatus;
 import com.comet.opik.api.OptimizationUpdate;
@@ -66,9 +65,11 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
 
+import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemTracing;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
 import static com.comet.opik.api.resources.utils.TestDropwizardAppExtensionUtils.newTestDropwizardAppExtension;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -320,14 +321,14 @@ class OptimizationsResourceTest {
             traceResourceClient.batchCreateTraces(traces, API_KEY, TEST_WORKSPACE_NAME);
             experimentResourceClient.createExperimentItem(experimentItems, API_KEY, TEST_WORKSPACE_NAME);
 
-            List<FeedbackScoreBatchItem> scoreBatchItems = traces.stream()
+            List<FeedbackScoreBatchItemTracing> scoreBatchItems = traces.stream()
                     .flatMap(trace -> feedbackScoreItems.stream()
-                            .map(score -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                            .map(score -> podamFactory.manufacturePojo(FeedbackScoreBatchItemTracing.class).toBuilder()
                                     .projectName(project.name())
                                     .id(trace.id())
                                     .name(score.name())
                                     .build()))
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scoreBatchItems, API_KEY, TEST_WORKSPACE_NAME);
 
@@ -653,14 +654,14 @@ class OptimizationsResourceTest {
             experimentResourceClient.createExperimentItem(experimentItems, apiKey, workspaceName);
 
             // Create feedback scores
-            List<FeedbackScoreBatchItem> scoreBatchItems = traces.stream()
+            List<FeedbackScoreBatchItemTracing> scoreBatchItems = traces.stream()
                     .flatMap(trace -> feedbackScoreItems.stream()
-                            .map(score -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                            .map(score -> podamFactory.manufacturePojo(FeedbackScoreBatchItemTracing.class).toBuilder()
                                     .projectName(project.name())
                                     .id(trace.id())
                                     .name(score.name())
                                     .build()))
-                    .toList();
+                    .collect(Collectors.toList());
 
             traceResourceClient.feedbackScores(scoreBatchItems, apiKey, workspaceName);
 
