@@ -59,6 +59,7 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemTracing;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -293,13 +294,13 @@ class WorkspacesResourceTest {
                         traceResourceClient.createTrace(trace, apiKey, workspaceName);
 
                         // create several feedback scores for that trace
-                        List<FeedbackScoreBatchItem> scores = scoreNames.stream()
-                                .map(name -> factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                        List<FeedbackScoreBatchItemTracing> scores = scoreNames.stream()
+                                .map(name -> factory.manufacturePojo(FeedbackScoreBatchItemTracing.class).toBuilder()
                                         .name(name)
                                         .projectName(projectName)
                                         .id(trace.id())
                                         .build())
-                                .toList();
+                                .collect(Collectors.toList());
 
                         traceResourceClient.feedbackScores(scores, apiKey, workspaceName);
 
